@@ -16,6 +16,9 @@
 Changes Since 0.11
 ==================
 
+* docutils/writers/odf_odt/__init__.py
+
+  - Apply patch by Jakub Wilk to fix bug [ 100 ].
 
 Release 0.11 (2013-07-22)
 =========================
